Add database health check endpoint and improve connection testing

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -9,8 +9,14 @@ FRONTEND_URL=https://kaleidoscope.geostat.ge
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=1000
 
-# Database (update with your production values)
+# Database Configuration
 DB_SERVER=192.168.1.29
-DB_DATABASE=kaleidoscope
-DB_USERNAME=sa
+DB_NAME=kaleidoscope
+DB_USER=sa
 DB_PASSWORD=Ozzy112358
+DB_PORT=1433
+DB_ENCRYPT=false
+DB_TRUST_SERVER_CERTIFICATE=true
+
+# Logging
+LOG_LEVEL=error
